--- a/views/package.json
+++ b/views/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "react-tooltip": "^5.26.4"
+    "react-tooltip": "^5.26.4",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
